# mlops

./: .gitignore  Dockerfile.api  Dockerfile.mlflow  Dockerfile.setup  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  db.py  generate_data.py  monitoring.py  prepare_feast_feature.py  serve_models.py  streamlit_app.py  train_mlflow.py  train_naive.py
feature_repo/: feature_definitions.py  feature_store.yaml
src/: data_validation.py  db.py  feast_feature.py  generate_data.py  monitoring.py  prepare_feast_feature.py  serve_models.py  serve_v1_naive.py  serve_v2_mlflow.py  serve_v3_validated.py  test_bad_data.py  train_mlflow.py
tests/: test_api.py  test_data_models.py
