[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "dataclasses>=0.8",
    "evidently>=0.7.21",
    "fastapi>=0.135.3",
    "feast>=0.62.0",
    "great-expectations>=1.16.0",
    "mlflow>=3.11.1",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "slowapi>=0.1.9",
]
